<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/bt_um"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/azulMuitoClaro"
            android:layout_margin="@dimen/margem_4"
            android:text="@string/botao_1"
            android:textColor="@color/azulEscuro"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bt_dois"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/azulMuitoClaro"
            android:layout_margin="@dimen/margem_4"
            android:text="@string/botao_2"
            android:textColor="@color/azulEscuro"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/bt_tres"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/azulMuitoClaro"
            android:layout_margin="@dimen/margem_4"
            android:text="@string/botao_3"
            android:textColor="@color/azulEscuro"
            android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/bt_quatro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/azulMuitoClaro"
            android:layout_margin="@dimen/margem_4"
            android:text="@string/botao_4"
            android:textColor="@color/azulEscuro"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bt_cinco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/azulMuitoClaro"
            android:layout_margin="@dimen/margem_4"
            android:text="@string/botao_5"
            android:textColor="@color/azulEscuro"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/bt_seis"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/azulMuitoClaro"
            android:layout_margin="@dimen/margem_4"
            android:text="@string/botao_6"
            android:textColor="@color/azulEscuro"
            android:layout_weight="1"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/bt_sete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/azulMuitoClaro"
            android:layout_margin="@dimen/margem_4"
            android:text="@string/botao_7"
            android:textColor="@color/azulEscuro"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bt_oito"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/azulMuitoClaro"
            android:layout_margin="@dimen/margem_4"
            android:text="@string/botao_8"
            android:textColor="@color/azulEscuro"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/bt_nove"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/azulMuitoClaro"
            android:layout_margin="@dimen/margem_4"
            android:text="@string/botao_9"
            android:textColor="@color/azulEscuro"
            android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/bt_apagar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/azulMuitoClaro"
            android:layout_margin="@dimen/margem_4"
            android:text="@string/botao_apagar"
            android:textColor="@color/azulEscuro"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bt_zero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/azulMuitoClaro"
            android:layout_margin="@dimen/margem_4"
            android:text="@string/botao_0"
            android:textColor="@color/azulEscuro"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/bt_Calcular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/azulPrincipal"
            android:layout_margin="@dimen/margem_4"
            android:text="@string/botao_calcular"
            android:textColor="@color/white"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>